Revenue and Economy
1. Basic economic system
2. Purchases can be made with starting money, and a message appears if you don't have enough.
3. Economic sectors are hidden in DM.
4. A revenue system was implemented using JSON to facilitate editing during testing/revision.
5. Commands for `/revenue set-get` were added.
6. A system was implemented to allow selling and repurchasing if you try to buy one type of weapon and then another.